<resources>
    <string name="app_name">DogApp</string>
    <string name="edit_fragment_name">Editar Cita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="sintomas">
        <item>Síntomas</item>
        <item>Solo duerme</item>
        <item>No come</item>
        <item>Fractura extremidad</item>
        <item>Tiene pulgas</item>
        <item>Tiene garrapatas</item>
        <item>Bota demasiado pelo</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleEditarCita">Editar Cita</string>
    <string name="nombreMascota">Nombre de la mascota</string>
    <string name="raza">Raza: tipo de raza</string>
    <string name="propietario">Nombre del propietario</string>
    <string name="telefono">Teléfono</string>
    <string name="guardarCita">Guardar Cita</string>
    <string name="imagen_de_un_perro">imagen de un perro</string>
    <string name="dogapp">DogApp</string>
    <string name="administrador_n_de_citas">Administrador \n de citas</string>
    <string name="button">Button</string>
    <string name="fractura_extremidad">Fractura extremidad</string>
    <string name="numeroDeCita">#1</string>
    <string name="cory">Cory</string>
    <string name="volver">Volver</string>
    <string name="nueva_cita">Nueva Cita</string>
    <string name="home_admin_citas_fragment">Home Admin Citas Fragment</string>
    <string name="selecciona_una_raza">Selecciona una raza</string>
    <string name="toolbar_dinamic" >Toolbar Dinamica</string>
    <string name="imagen_de_la_mascota">Imagen de la mascota</string>
    <string name="telefonoPropietario">Teléfono</string>
    <string name="eliminar_cita">Eliminar cita</string>
    <string name="sintomas">Síntomas: Fatiga y pérdida de apetito</string>
    <string name="btn_editar">Boton Editar</string>
    <string name="btn_editar_cita">Editar Cita</string>
</resources>