<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeAdminCitasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rose"
        android:contentDescription="@string/home_admin_citas_fragment">

        <!-- Header Layout -->

        <!-- Nueva Cita Button -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/header_background"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Header Title -->

            <!-- DogApp Image -->

            <!-- DogApp Title -->

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="277dp"
                android:layout_height="74dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/alfa_slab_one"
                android:scaleType="fitXY"
                android:text="@string/administrador_n_de_citas"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="85dp"
                android:layout_height="120dp"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/imagen_de_un_perro"
                android:src="@drawable/kaiser"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                />

            <TextView
                android:id="@+id/headerDogAppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/dogapp"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/headerImage"
                app:layout_constraintTop_toBottomOf="@id/headerImage"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageButton
            android:id="@+id/btn_nueva_Cita"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_pink"
            android:contentDescription="@string/nueva_cita"
            android:elevation="15dp"
            android:src="@drawable/ic_add"
            android:translationZ="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCitas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toTopOf="@id/btn_nueva_Cita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"  />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>