<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.create.NuevaCitaFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_mascota"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreMascota"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_mascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_raza"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/raza"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/et_mascota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/iet_raza"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingHorizontal="15dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_propietario"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propietario"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/et_raza"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_propietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_telefono"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeColor="@color/purple_500"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintTop_toBottomOf="@id/et_propietario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinner_sintomas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_telefono" />


        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="160dp"
            android:backgroundTint="@color/pink"
            android:drawableLeft="@drawable/ic_guardar"
            android:enabled="false"
            android:text="@string/guardarCita"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_sintomas" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>